# libnginx-mod-redirectionio

./: .gitignore  CHANGELOG.md  Dockerfile.centos.6  Dockerfile.centos.7  Dockerfile.debian.buster  Dockerfile.debian.stretch  Dockerfile.ubuntu.1604  Dockerfile.ubuntu.1710  Dockerfile.ubuntu.1804  Makefile.in  README.md  compile.deb.sh  compile.rh.sh  config  configure.ac  debian-stretch.patch  dev-build.sh  nginx-test.conf.in  nginx.conf  ngx_http_redirectionio_module.c  no-pool.patch  valgrind.suppress
.github/workflows/: beta-release.yml  stable-release.yml
nginx/: Makefile
nginx/objs/: Makefile  autoconf.err  nginx.8  ngx_auto_config.h  ngx_http_geoip_module_modules.c  ngx_http_image_filter_module_modules.c  ngx_http_perl_module_modules.c  ngx_http_redirectionio_module_modules.c  ngx_http_xslt_filter_module_modules.c  ngx_mail_module_modules.c  ngx_modules.c  ngx_stream_module_modules.c
nginx/objs/src/http/modules/perl/: MYMETA.json  MYMETA.yml  Makefile  nginx.c  version
nginx/objs/src/http/modules/perl/blib/lib/: nginx.pm
nginx/objs/src/http/modules/perl/blib/man3/: nginx.3pm
nginx/src/core/: nginx.h  ngx_array.c  ngx_array.h  ngx_palloc.c  ngx_palloc.h
patches/: glibc_bug_fixed.patch
src/: ngx_http_json.c  ngx_http_pool.c  ngx_http_pool.h  ngx_http_redirectionio_module.c  ngx_http_redirectionio_module.h  ngx_http_redirectionio_module_filter.c  ngx_http_redirectionio_module_pool.c  ngx_http_redirectionio_protocol.c  ngx_http_redirectionio_protocol.h
